docs: 更新IFLOW.md项目开发指南
- 更新项目概述和核心特性，强调按需连接和连接池管理
- 同步技术架构版本信息 (Spring Boot 3.2.1, React 18.2.0等)
- 更新项目结构和文件路径反映当前实际状态
- 完善快速启动指南和Docker部署说明
- 添加详细的开发指南和API接口说明
- 扩展数据库支持列表至18+种数据库类型
- 增强监控和维护部分
- 完善故障排除和性能调优指南
- 更新安全考虑和认证机制说明